# chatbot-prot

./: .gitignore  main.py  my_server.py  pyproject.toml  requirements.txt
comm/: config.py  logger_manager.py
examples/: Dockerfile  chat_sample.py  readme
math-mcp-server/: README.md
math-mcp-server/app/: math_server.py  math_server_stdio.py
mcp-client/: mcp_client.py  mcp_clients.py
wether-mcp-server/app/: config.py  wether_server.py
